# Rendering-Application

./: .gitmodules  CMakeLists.txt
Rendering-Application-Core/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp  Application.cpp  Application.hpp  Camera.cpp  Camera.hpp  Component.cpp  Component.hpp  Input.cpp  Input.hpp  Light.cpp  Light.hpp  LineRenderer.cpp  LineRenderer.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Object.hpp  Pointer.hpp  Renderer.cpp  Renderer.hpp  Rendering.cpp  Rendering.hpp  Resource.hpp  Shader.cpp  Shader.hpp  Skeleton.cpp  Skeleton.hpp  Texture.cpp  Texture.hpp  Transform.cpp  Transform.hpp  Utilities.hpp  Window.cpp  Window.hpp
Rendering-Application-Example/: AnimationDemo.hpp  CameraController.hpp  DemoController.hpp  Main.cpp  ObjectRotator.hpp  RenderingApplication.cpp  RenderingApplication.hpp  SoulSpearDemo.hpp
Resources/: AnimTest.blend  AnimTest.blend1  AnimTest.fbx  Animation_Test.shader  LineRenderer.shader  Simple.shader  SoulSpear.shader  Taunt2.fbx
